--- a/CSS/home.css
+++ b/CSS/home.css
@@ -35,6 +35,7 @@ h1 {
   text-shadow: 1px 1px 0px #589796, 2px 2px 0px #589796, 3px 3px 0px #589796,
     4px 4px 0px #589796, 5px 5px 0px #589796, 6px 6px 0px #589796,
     7px 7px 0px #589796, 20px 20px 10px rgba(0, 0, 0, 0.7);
+  cursor: default;
 }
 h1 span {
   color: #ff3a5d;
