--- a/CSS/my-wishlist.css
+++ b/CSS/my-wishlist.css
@@ -80,11 +80,84 @@ MAIN SECTION
   left: 50%;
   transform: translate(-50%, -50%);
   cursor: default;
+  display: none;
+}
+.empty-list.active {
+  display: block;
 }
 .empty-list h2 {
   color: #2e2e2e;
   font-size: 60px;
   font-weight: normal;
+}
+
+/********** ITEMS LIST **********/
+.items-list {
+  padding-top: 100px;
+  display: none;
+}
+.items-list.active {
+  display: block;
+}
+
+.item {
+  background-color: #1d1d1d;
+  width: 60%;
+  height: 175px;
+  border-radius: 20px;
+  margin: auto;
+  margin-bottom: 50px;
+  display: flex;
+  box-shadow: 20px 20px 40px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+}
+
+/* ITEM PHOTO */
+.photo {
+  width: 26%;
+  height: 100%;
+}
+
+/* ITEM DETAILS */
+.details {
+  color: #7f7f7f;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  padding-top: 20px;
+  padding-left: 30px;
+}
+
+.title {
+  font-size: 28px;
+  font-weight: normal;
+}
+hr {
+  background-color: #75c9c8;
+  width: 35%;
+  height: 3.1px;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+}
+.description {
+  font-size: 18px;
+  margin-top: 25px;
+}
+
+/* CLOSE WINDOW */
+.trash {
+  width: 12%;
+  height: 100%;
+  position: relative;
+}
+.fa-trash-can {
+  color: #ff3a5d;
+  position: absolute;
+  top: 50%;
+  left: 25%;
+  transform: translateY(-50%);
+  cursor: pointer;
 }
 
 /*
@@ -98,6 +171,7 @@ footer {
   width: 48.5px;
   height: 48.5px;
   border-radius: 50%;
+  box-shadow: 9.6px 9.6px 26px rgba(0, 0, 0, 0.4);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -249,4 +323,66 @@ POPUP CREATE MENU
   border-radius: 5px;
   outline: none;
   cursor: pointer;
+}
+
+/*
+========================
+POPUP DELETE MENU
+========================
+*/
+
+.delete-popup {
+  background-color: rgba(0, 0, 0, 0.8);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  visibility: hidden;
+}
+.delete-popup.active {
+  visibility: visible;
+}
+
+.delete-menu {
+  background-color: #202020;
+  color: #fff;
+  width: 450px;
+  height: 150px;
+  font-size: 20px;
+  text-align: center;
+  border-radius: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  transition: 0.5s;
+}
+.delete-menu.active {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.delete-menu p {
+  margin-top: 35px;
+}
+
+.delete-menu button {
+  border: none;
+  outline: none;
+  color: #fff;
+  width: 40%;
+  height: 35px;
+  font-size: 18px;
+  font-family: Rockwell, sans-serif;
+  border-radius: 6px;
+  margin-top: 20px;
+  padding-top: 4px;
+  cursor: pointer;
+}
+#cancel-delete {
+  background-color: #75c9c8;
+}
+#confirm-delete {
+  background-color: #ff3a5d;
 }
