--- a/CSS/my-wishlist.css
+++ b/CSS/my-wishlist.css
@@ -132,7 +132,7 @@ MAIN SECTION
   font-size: 28px;
   font-weight: normal;
 }
-hr {
+.details hr {
   background-color: #75c9c8;
   width: 35%;
   height: 3.1px;
@@ -273,8 +273,10 @@ POPUP CREATE MENU
 
 .create-menu {
   background-color: #202020;
-  width: 600px;
-  height: 700px;
+  color: #7f7f7f;
+  width: 500px;
+  height: 630px;
+  text-align: center;
   border-radius: 10px;
   position: absolute;
   top: 50%;
@@ -284,6 +286,72 @@ POPUP CREATE MENU
 }
 .create-menu.active {
   transform: translate(-50%, -50%) scale(1);
+}
+
+.create-menu h2 {
+  font-size: 37px;
+  font-weight: normal;
+  margin-top: 30px;
+}
+.create-menu hr {
+  background-color: #75c9c8;
+  display: inline-block;
+  width: 90%;
+  height: 3px;
+  border: none;
+  border-radius: 10px;
+}
+
+/****PHOTO INPUT****/
+.upload-photo {
+  background-color: #171717;
+  width: 100%;
+  height: 250px;
+  margin-top: 30px;
+  position: relative;
+  cursor: pointer;
+}
+.fa-image {
+  color: #7f7f7f;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/****NAME INPUT****/
+.create-menu input {
+  display: inline-block;
+}
+#category-name {
+  background-color: transparent;
+  color: #7f7f7f;
+  width: 90%;
+  height: 41px;
+  font-size: 20px;
+  font-family: Rockwell, sans-serif;
+  outline: none;
+  border: none;
+  border-left: 3px solid #75c9c8;
+  padding-left: 10px;
+  margin-top: 20px;
+}
+
+/****DESCRIPTION INPUT****/
+#category-description {
+  background-color: transparent;
+  color: #7f7f7f;
+  width: 90%;
+  height: 100px;
+  font-size: 20px;
+  font-family: Rockwell, sans-serif;
+  border: none;
+  border-left: 3px solid #75c9c8;
+  padding-left: 10px;
+  padding-top: 10px;
+  margin-top: 20px;
+  outline: none;
+  resize: none;
 }
 
 .create-menu-buttons {
