--- a/CSS/my-destinations.css
+++ b/CSS/my-destinations.css
@@ -5,7 +5,7 @@
 
 body,
 html {
-  background-color: #202020;
+  background-color: #0b0e12;
   font-family: Rockwell, sans-serif;
   user-select: none;
   -webkit-user-select: none;
@@ -21,7 +21,6 @@ HEADER SECTION
 */
 
 header {
-  width: 75%;
   height: 70px;
   margin: auto;
   padding-left: 30px;
@@ -34,30 +33,18 @@ header {
 }
 header::before {
   content: "";
-  background-color: #ff3a5d;
-  width: 100%;
-  height: 5px;
+  background-color: #101e34;
+  width: 5.6px;
+  height: 54.8px;
   position: absolute;
-  bottom: 0%;
-  left: 0%;
-  border-radius: 10px;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.7);
+  top: 50%;
+  left: 0.7%;
+  transform: translateY(-50%);
 }
 
 h1 {
-  color: #75c9c8;
-  font-size: 37px;
-  text-shadow: 0.5px 0.5px 0px #589796, 1px 1px 0px #589796,
-    1.5px 1.5px 0px #589796, 2px 2px 0px #589796, 2.5px 2.5px 0px #589796,
-    3px 3px 0px #589796, 3.5px 3.5px 0px #589796,
-    8px 8px 10px rgba(0, 0, 0, 0.7);
-}
-h1 span {
-  color: #ff3a5d;
-  text-shadow: 0.5px 0.5px 0px #b62943, 1px 1px 0px #b62943,
-    1.5px 1.5px 0px #b62943, 2px 2px 0px #b62943, 2.5px 2.5px 0px #b62943,
-    3px 3px 0px #b62943, 3.5px 3.5px 0px #b62943,
-    8px 8px 10px rgba(0, 0, 0, 0.7);
+  color: #fff;
+  font-size: 26px;
 }
 
 .user-information {
@@ -65,6 +52,10 @@ h1 span {
 }
 .fa-user-astronaut {
   cursor: pointer;
+  transition: 0.2s;
+}
+.fa-user-astronaut:hover {
+  color: #fff;
 }
 
 /*
@@ -87,35 +78,35 @@ MAIN SECTION
 }
 .empty-list h2 {
   color: #2e2e2e;
-  font-size: 60px;
+  font-size: 35px;
   font-weight: normal;
 }
 
 /********** ITEMS LIST **********/
 .items-list {
-  padding-top: 100px;
+  padding-top: 50px;
   display: none;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  gap: 7px;
 }
 .items-list.active {
-  display: block;
+  display: flex;
 }
 
 .item {
-  background-color: #1d1d1d;
-  width: 60%;
-  height: 175px;
-  border-radius: 20px;
-  margin: auto;
+  width: 340px;
+  height: 450px;
+  border-radius: 15px;
   margin-bottom: 50px;
-  display: flex;
   box-shadow: 20px 20px 40px rgba(0, 0, 0, 0.3);
   overflow: hidden;
+  position: relative;
 }
 
 /* ITEM PHOTO */
 .photo {
-  background-color: #171717;
-  width: 26%;
+  width: 100%;
   height: 100%;
   position: relative;
 }
@@ -130,43 +121,40 @@ MAIN SECTION
 
 /* ITEM DETAILS */
 .details {
-  color: #7f7f7f;
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box;
-  padding-top: 20px;
-  padding-left: 30px;
+  background-color: rgba(255, 255, 255, 0.01);
+  backdrop-filter: blur(10px);
+  color: #fff;
+  width: 90%;
+  height: 90%;
+  border-radius: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  transition: 0.5s;
+}
+.item:hover .details {
+  height: 15%;
+  top: 88%;
 }
 
 .title {
   font-size: 28px;
   font-weight: normal;
-}
-.details hr {
-  background-color: #75c9c8;
-  width: 35%;
-  height: 3.1px;
-  border: none;
-  outline: none;
-  border-radius: 10px;
-}
-.description {
-  font-size: 18px;
-  margin-top: 25px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 /* CLOSE WINDOW */
-.trash {
-  width: 12%;
-  height: 100%;
-  position: relative;
-}
 .fa-trash-can {
   color: #ff3a5d;
   position: absolute;
-  top: 50%;
-  left: 25%;
-  transform: translateY(-50%);
+  top: 5%;
+  right: 2%;
+  transform: translate(-50%, -50%);
   cursor: pointer;
 }
 
@@ -177,7 +165,7 @@ FOOTER SECTION
 */
 
 footer {
-  background-color: #ff3a5d;
+  background-color: #101e34;
   width: 48.5px;
   height: 48.5px;
   border-radius: 50%;
@@ -190,6 +178,7 @@ footer {
   left: 50%;
   transform: translateX(-50%);
   cursor: pointer;
+  z-index: 10;
 }
 
 footer .fa-plus {
@@ -221,7 +210,7 @@ POPUP LOGOUT MENU
 }
 
 .logout-menu {
-  background-color: #202020;
+  background-color: #0b0e12;
   width: 350px;
   height: 150px;
   border-radius: 10px;
@@ -236,7 +225,7 @@ POPUP LOGOUT MENU
 }
 
 #logout-button {
-  background-color: #ff3a5d;
+  background-color: #101e34;
   color: #fff;
   width: 80%;
   height: 50px;
@@ -282,10 +271,10 @@ POPUP CREATE MENU
 }
 
 .create-menu {
-  background-color: #202020;
-  color: #7f7f7f;
+  background-color: #0b0e12;
+  color: #fff;
   width: 500px;
-  height: 630px;
+  height: 500px;
   text-align: center;
   border-radius: 10px;
   position: absolute;
@@ -304,7 +293,7 @@ POPUP CREATE MENU
   margin-top: 30px;
 }
 .create-menu hr {
-  background-color: #75c9c8;
+  background-color: #101e34;
   display: inline-block;
   width: 90%;
   height: 3px;
@@ -314,7 +303,7 @@ POPUP CREATE MENU
 
 /****PHOTO INPUT****/
 .upload-photo {
-  background-color: #171717;
+  background-color: #0b0e12;
   width: 100%;
   height: 250px;
   margin-top: 30px;
@@ -359,7 +348,7 @@ POPUP CREATE MENU
   font-family: Rockwell, sans-serif;
   outline: none;
   border: none;
-  border-left: 3px solid #75c9c8;
+  border-left: 3px solid #101e34;
   padding-left: 10px;
   margin-top: 20px;
 }
@@ -408,7 +397,7 @@ POPUP CREATE MENU
 #create-button {
   width: 110px;
   height: 30px;
-  background-color: #75c9c8;
+  background-color: #101e34;
   color: #fff;
   font-family: Rockwell, sans-serif;
   font-size: 20px;
@@ -441,7 +430,7 @@ POPUP DELETE MENU
 }
 
 .delete-menu {
-  background-color: #202020;
+  background-color: #0b0e12;
   color: #fff;
   width: 450px;
   height: 150px;
@@ -476,8 +465,8 @@ POPUP DELETE MENU
   cursor: pointer;
 }
 #cancel-delete {
-  background-color: #75c9c8;
+  background-color: #ff3a5d;
 }
 #confirm-delete {
-  background-color: #ff3a5d;
+  background-color: #101e34;
 }
