--- a/CSS/sign-in.css
+++ b/CSS/sign-in.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-color: #202020;
+  background-color: #0b0e12;
   font-family: Rockwell, sans-serif;
 }
 a {
@@ -24,8 +24,6 @@ main {
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
 }
 
 /*
@@ -34,18 +32,27 @@ TITLE
 ============
 */
 
-h1 {
-  color: #75c9c8;
-  font-size: 100px;
-  text-shadow: 1px 1px 0px #589796, 2px 2px 0px #589796, 3px 3px 0px #589796,
-    4px 4px 0px #589796, 5px 5px 0px #589796, 6px 6px 0px #589796,
-    7px 7px 0px #589796, 20px 20px 10px rgba(0, 0, 0, 0.7);
+.title {
+  display: inline-block;
+  width: 100%;
+  position: relative;
 }
-h1 span {
-  color: #ff3a5d;
-  text-shadow: 1px 1px 0px #b62943, 2px 2px 0px #b62943, 3px 3px 0px #b62943,
-    4px 4px 0px #b62943, 5px 5px 0px #b62943, 6px 6px 0px #b62943,
-    7px 7px 0px #b62943, 20px 20px 10px rgba(0, 0, 0, 0.7);
+h1 {
+  color: #fff;
+  font-size: 90px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+#diviser {
+  background-color: #101e34;
+  width: 13px;
+  height: 127.9px;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translate(50%, -50%);
 }
 
 /*
@@ -54,9 +61,14 @@ FORM
 ============
 */
 
+.form {
+  display: inline-block;
+  width: 100%;
+}
 .account {
   text-align: center;
   width: 380px;
+  margin: auto;
 }
 .container-email,
 .container-password {
@@ -84,7 +96,7 @@ input {
   content: "";
   width: 100%;
   height: 5px;
-  background-color: #75c9c8;
+  background-color: #101e34;
   border-radius: 50px;
   box-shadow: 7px 7px 5px rgba(0, 0, 0, 0.6);
   position: absolute;
@@ -98,7 +110,7 @@ BUTTON
 */
 
 #sign-in-button {
-  background-color: #ff3a5d;
+  background-color: #101e34;
   color: #fff;
   width: 147.3px;
   height: 43px;
@@ -107,8 +119,6 @@ BUTTON
   margin-bottom: 30px;
   font-family: Rockwell, sans-serif;
   font-size: 23px;
-  box-shadow: 1px 1px 0px #b62943, 2px 2px 0px #b62943, 3px 3px 0px #b62943,
-    4px 4px 0px #b62943, 15px 15px 10px rgba(0, 0, 0, 0.7);
   cursor: pointer;
 }
 
@@ -123,14 +133,14 @@ p {
 }
 p a {
   text-decoration: none;
-  color: #75c9c8;
+  color: #004e54;
   position: relative;
 }
 p a::before {
   content: "";
   width: 0%;
   height: 3px;
-  background-color: #75c9c8;
+  background-color: #004e54;
   border-radius: 50px;
   position: absolute;
   top: 100%;
@@ -139,4 +149,33 @@ p a::before {
 }
 p a:hover::before {
   width: 100%;
+}
+
+/*
+==============
+MEDIA QUERIES
+==============
+*/
+
+@media only screen and (max-width: 1430px) {
+  h1 {
+    font-size: 60px;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  main {
+    flex-direction: column;
+  }
+  .title {
+    width: 500px;
+    margin: auto;
+    margin-bottom: 100px;
+  }
+}
+
+@media only screen and (max-width: 560px) {
+  .title {
+    transform: scale(0.7);
+  }
 }
