--- a/CSS/my-destinations.css
+++ b/CSS/my-destinations.css
@@ -31,26 +31,25 @@ header {
   align-items: center;
   position: relative;
 }
-header::before {
+
+h1 {
+  color: #fff;
+  font-size: 26px;
+  position: relative;
+}
+h1::before {
   content: "";
   background-color: #101e34;
   width: 5.6px;
   height: 54.8px;
   position: absolute;
   top: 50%;
-  left: 0.7%;
+  left: -8%;
   transform: translateY(-50%);
 }
 
-h1 {
-  color: #fff;
-  font-size: 26px;
-}
-
-.user-information {
-  color: #7f7f7f;
-}
 .fa-user-astronaut {
+  color: #7f7f7f;
   cursor: pointer;
   transition: 0.2s;
 }
@@ -80,6 +79,7 @@ MAIN SECTION
   color: #2e2e2e;
   font-size: 35px;
   font-weight: normal;
+  text-align: center;
 }
 
 /********** ITEMS LIST **********/
@@ -214,6 +214,9 @@ POPUP LOGOUT MENU
   width: 350px;
   height: 150px;
   border-radius: 10px;
+  padding-top: 40px;
+  box-sizing: border-box;
+  text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -222,6 +225,10 @@ POPUP LOGOUT MENU
 }
 .logout-menu.active {
   transform: translate(-50%, -50%) scale(1);
+}
+
+#username {
+  color: #fff;
 }
 
 #logout-button {
@@ -234,10 +241,6 @@ POPUP LOGOUT MENU
   outline: none;
   font-family: Rockwell, sans-serif;
   font-size: 20px;
-  position: absolute;
-  top: 55%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   cursor: pointer;
 }
 
@@ -469,4 +472,17 @@ POPUP DELETE MENU
 }
 #confirm-delete {
   background-color: #101e34;
+}
+
+/*
+========================
+Media Queries 
+========================
+*/
+
+@media screen and (max-width: 550px) {
+  .create-menu {
+    width: 350px;
+    height: 500px;
+  }
 }
